--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#105;&#x6c;&#116;&#111;&#58;&#115;&#117;&#x70;&#x70;&#111;&#x72;&#116;&#64;&#118;&#x69;v&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#x6d;">&#115;&#117;&#x70;&#x70;&#111;&#x72;&#116;&#64;&#118;&#x69;v&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#105;&#108;&#116;&#111;&#x3a;&#x73;&#x75;&#x70;&#112;&#x6f;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#x61;&#114;&#x61;&#100;o&#x2e;&#99;&#x6f;&#109;">&#x73;&#x75;&#x70;&#112;&#x6f;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#x61;&#114;&#x61;&#100;o&#x2e;&#99;&#x6f;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;a&#105;&#108;&#x74;&#111;&#x3a;&#109;&#x6a;&#x6c;&#97;&#x67;&#x61;&#116;&#x74;&#117;&#x74;&#97;&#64;&#x67;&#109;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;">&#109;&#x6a;&#x6c;&#97;&#x67;&#x61;&#116;&#x74;&#117;&#x74;&#97;&#64;&#x67;&#109;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;l&#x74;o&#x3a;&#x6d;&#106;&#x6c;&#x61;&#103;&#x61;&#x74;&#116;&#x75;t&#x61;&#64;&#x67;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#x6d;">&#x6d;&#106;&#x6c;&#x61;&#103;&#x61;&#x74;&#116;&#x75;t&#x61;&#64;&#x67;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1436,7 +1436,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
             MO bld Complete:                                         done, des71, 2019-05-16,  5h
 
     ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des58, 3d
-        3 SeC MG 1 reg_it:                                                 done,  after des58, 1d
+        3 SeC MG 1 reg_it:                                           done, des42, after des58, 1d
         3 SeC MG 2 thn_it:                                                 des43, after des42, 1d
         3 SeC MG 3 bld_it:                                                 des44, after des43, 1d
 #
@@ -1697,7 +1697,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#x69;&#x6c;&#116;&#111;&#x3a;&#115;&#117;&#x70;&#x70;&#111;&#114;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#x61;&#x64;o&#x2e;&#x63;&#111;&#109;">&#115;&#117;&#x70;&#x70;&#111;&#114;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#x61;&#x64;o&#x2e;&#x63;&#111;&#109;</a></li>
+<li><a href="m&#x61;&#105;l&#116;&#x6f;:s&#117;&#x70;&#x70;&#x6f;&#114;&#x74;&#64;&#118;&#105;&#x76;&#97;&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#109;">s&#117;&#x70;&#x70;&#x6f;&#114;&#x74;&#64;&#118;&#105;&#x76;&#97;&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
