--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#105;&#108;&#116;&#111;&#x3a;&#x73;&#x75;&#x70;&#112;&#x6f;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#x61;&#114;&#x61;&#100;o&#x2e;&#99;&#x6f;&#109;">&#x73;&#x75;&#x70;&#112;&#x6f;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#x61;&#114;&#x61;&#100;o&#x2e;&#99;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#x69;&#108;&#116;&#111;&#x3a;&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#64;&#118;&#105;&#118;&#x61;&#x72;&#97;&#100;&#111;&#46;&#99;o&#x6d;">&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#64;&#118;&#105;&#118;&#x61;&#x72;&#97;&#100;&#111;&#46;&#99;o&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;l&#x74;o&#x3a;&#x6d;&#106;&#x6c;&#x61;&#103;&#x61;&#x74;&#116;&#x75;t&#x61;&#64;&#x67;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#x6d;">&#x6d;&#106;&#x6c;&#x61;&#103;&#x61;&#x74;&#116;&#x75;t&#x61;&#64;&#x67;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;a&#x69;&#108;&#x74;&#111;&#x3a;&#109;&#x6a;&#x6c;&#x61;&#x67;&#x61;t&#x74;&#117;&#116;&#97;&#64;&#x67;&#109;&#x61;&#x69;&#108;.&#99;&#x6f;&#109;">&#109;&#x6a;&#x6c;&#x61;&#x67;&#x61;t&#x74;&#117;&#116;&#97;&#64;&#x67;&#109;&#x61;&#x69;&#108;.&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1697,7 +1697,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#x61;&#105;l&#116;&#x6f;:s&#117;&#x70;&#x70;&#x6f;&#114;&#x74;&#64;&#118;&#105;&#x76;&#97;&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#109;">s&#117;&#x70;&#x70;&#x6f;&#114;&#x74;&#64;&#118;&#105;&#x76;&#97;&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#97;&#105;&#108;&#116;&#111;&#58;s&#x75;&#x70;p&#111;&#114;&#x74;&#x40;v&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#x6f;&#109;">s&#x75;&#x70;p&#111;&#114;&#x74;&#x40;v&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
