--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.019 | 2019/05/17</title>
+		<title>VRD | Advent | 3.020 | 2019/05/19</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#x69;&#108;&#116;&#111;&#x3a;&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#64;&#118;&#105;&#118;&#x61;&#x72;&#97;&#100;&#111;&#46;&#99;o&#x6d;">&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#64;&#118;&#105;&#118;&#x61;&#x72;&#97;&#100;&#111;&#46;&#99;o&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;&#108;&#x74;&#x6f;&#58;&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#105;&#x76;&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;o&#x6d;">&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#105;&#x76;&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;o&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;a&#x69;&#108;&#x74;&#111;&#x3a;&#109;&#x6a;&#x6c;&#x61;&#x67;&#x61;t&#x74;&#117;&#116;&#97;&#64;&#x67;&#109;&#x61;&#x69;&#108;.&#99;&#x6f;&#109;">&#109;&#x6a;&#x6c;&#x61;&#x67;&#x61;t&#x74;&#117;&#116;&#97;&#64;&#x67;&#109;&#x61;&#x69;&#108;.&#99;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#x69;l&#116;&#111;&#58;&#x6d;&#106;&#x6c;&#x61;g&#x61;&#116;t&#117;t&#97;&#x40;&#x67;ma&#105;&#108;&#46;&#99;&#x6f;&#x6d;">&#x6d;&#106;&#x6c;&#x61;g&#x61;&#116;t&#117;t&#97;&#x40;&#x67;ma&#105;&#108;&#46;&#99;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1437,8 +1437,8 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
 
     ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des58, 3d
         3 SeC MG 1 reg_it:                                           done, des42, after des58, 1d
-        3 SeC MG 2 thn_it:                                                 des43, after des42, 1d
-        3 SeC MG 3 bld_it:                                                 des44, after des43, 1d
+        3 SeC MG 2 bld_it:                                           done, des43, after des42, 1d
+        3 SeC MG 3 thn_it:                                                 des44, after des43, 1d
 #
 section 4 ME Latin and Greek
 
@@ -1697,7 +1697,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#105;&#108;&#116;&#111;&#58;s&#x75;&#x70;p&#111;&#114;&#x74;&#x40;v&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#x6f;&#109;">s&#x75;&#x70;p&#111;&#114;&#x74;&#x40;v&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#97;&#105;&#108;&#116;&#111;&#58;&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#x76;i&#x76;&#97;&#x72;a&#100;&#111;&#x2e;&#99;&#x6f;&#109;">&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#x76;i&#x76;&#97;&#x72;a&#100;&#111;&#x2e;&#99;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
