--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;a&#105;&#x6c;&#x74;&#x6f;&#58;&#x73;&#117;p&#112;&#111;&#x72;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#x61;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;">&#x73;&#117;p&#112;&#111;&#x72;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#x61;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#x69;&#x6c;&#116;o&#58;&#x73;&#117;&#x70;p&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;a&#114;a&#x64;&#111;&#46;&#x63;&#111;m">&#x73;&#117;&#x70;p&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;a&#114;a&#x64;&#111;&#46;&#x63;&#111;m</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;l&#116;&#x6f;&#x3a;&#x6d;&#x6a;&#108;&#x61;g&#97;&#116;&#116;&#117;&#x74;a&#64;&#103;&#109;&#x61;&#105;&#108;.c&#x6f;&#x6d;">&#x6d;&#x6a;&#108;&#x61;g&#97;&#116;&#116;&#117;&#x74;a&#64;&#103;&#109;&#x61;&#105;&#108;.c&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;i&#x6c;&#x74;&#x6f;&#x3a;&#109;jla&#x67;&#x61;&#x74;&#116;&#x75;&#116;&#97;&#64;g&#x6d;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#109;">&#109;jla&#x67;&#x61;&#x74;&#116;&#x75;&#116;&#97;&#64;g&#x6d;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1697,7 +1697,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#x3a;&#x73;&#x75;&#112;&#x70;o&#114;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#x72;&#97;&#100;&#x6f;&#x2e;&#99;&#x6f;&#x6d;">&#x73;&#x75;&#112;&#x70;o&#114;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#x72;&#97;&#100;&#x6f;&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li><a href="&#109;&#97;&#x69;&#x6c;&#116;o&#58;&#115;&#x75;&#x70;&#112;&#111;&#114;&#116;&#x40;&#118;&#x69;&#x76;&#x61;&#114;&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;&#109;">&#115;&#x75;&#x70;&#112;&#111;&#114;&#116;&#x40;&#118;&#x69;&#x76;&#x61;&#114;&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
