--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#x69;&#x6c;&#116;o&#58;&#x73;&#117;&#x70;p&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;a&#114;a&#x64;&#111;&#46;&#x63;&#111;m">&#x73;&#117;&#x70;p&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;a&#114;a&#x64;&#111;&#46;&#x63;&#111;m</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;t&#x6f;&#x3a;&#x73;&#x75;&#x70;&#x70;or&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#x64;o&#x2e;&#99;o&#x6d;">&#x73;&#x75;&#x70;&#x70;or&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#x64;o&#x2e;&#99;o&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;i&#x6c;&#x74;&#x6f;&#x3a;&#109;jla&#x67;&#x61;&#x74;&#116;&#x75;&#116;&#97;&#64;g&#x6d;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#109;">&#109;jla&#x67;&#x61;&#x74;&#116;&#x75;&#116;&#97;&#64;g&#x6d;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#x6c;&#x74;o&#58;&#109;&#106;&#108;&#97;&#103;&#97;&#x74;&#x74;&#117;&#116;&#x61;&#64;&#x67;&#x6d;&#97;&#105;&#x6c;&#46;&#x63;&#111;&#x6d;">&#109;&#106;&#108;&#97;&#103;&#97;&#x74;&#x74;&#117;&#116;&#x61;&#64;&#x67;&#x6d;&#97;&#105;&#x6c;&#46;&#x63;&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1697,7 +1697,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#x69;&#x6c;&#116;o&#58;&#115;&#x75;&#x70;&#112;&#111;&#114;&#116;&#x40;&#118;&#x69;&#x76;&#x61;&#114;&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;&#109;">&#115;&#x75;&#x70;&#112;&#111;&#114;&#116;&#x40;&#118;&#x69;&#x76;&#x61;&#114;&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#109;a&#x69;&#x6c;&#116;&#x6f;:&#115;&#117;p&#x70;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#x64;&#111;&#46;&#99;&#x6f;m">&#115;&#117;p&#x70;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#x64;&#111;&#46;&#99;&#x6f;m</a></li>
 </ul></li>
 </ul></li>
 </ul>
