--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#111;&#58;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#64;&#x76;&#x69;va&#114;&#97;&#x64;&#111;&#46;&#99;&#x6f;&#109;">&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#64;&#x76;&#x69;va&#114;&#97;&#x64;&#111;&#46;&#99;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;a&#105;&#108;&#x74;o&#x3a;&#x73;&#117;&#112;&#x70;&#111;&#x72;&#116;&#x40;&#118;i&#118;&#97;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#111;&#109;">&#x73;&#117;&#112;&#x70;&#111;&#x72;&#116;&#x40;&#118;i&#118;&#97;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;&#108;&#116;&#111;&#x3a;&#109;&#106;&#108;&#x61;&#x67;&#97;&#116;&#116;u&#116;&#x61;&#64;&#x67;&#x6d;&#x61;&#105;&#108;&#x2e;&#99;&#111;&#109;">&#109;&#106;&#108;&#x61;&#x67;&#97;&#116;&#116;u&#116;&#x61;&#64;&#x67;&#x6d;&#x61;&#105;&#108;&#x2e;&#99;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#111;&#58;&#x6d;&#106;&#108;&#x61;&#103;&#x61;t&#116;&#x75;&#x74;&#97;&#x40;g&#x6d;&#97;&#x69;&#108;&#46;&#x63;&#111;&#109;">&#x6d;&#106;&#108;&#x61;&#103;&#x61;t&#116;&#x75;&#x74;&#97;&#x40;g&#x6d;&#97;&#x69;&#108;&#46;&#x63;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1440,10 +1440,14 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
         3 SeC MG 2 bld_it:                                           done, des43, after des42, 1d
         3 SeC MG 3 thn_it:                                           done, des44, after des43, 1d
         SeC MG fixes:                                                      des72, after des44, 1d
+
+    ADV-0003-0005-0001 Kerning Planning SeC:                               des73, after des72, 2d
+        Kerning Pairs and Grouping:                                        des74, after des72, 1d
+        Kerning Compression:                                               des75, after des74, 1d
 #
 section 4 ME Latin and Greek
 
-ADV-0004-0007-0001 4 ME Latin and ME Greek:                          crit, des33, after des32, 12d
+ADV-0004-0007-0001 4 ME Latin and ME Greek:                          crit, des33, 2019-06-07, 12d
     ADV-0004-0007-0001 MeL MO:                                             des34, after des32, 4d
         4 MeL MO 1 reg:                                                    des45, after des32, 1d
         4 MeL MO 2 thn:                                                    des46, after des45, 1d
@@ -1698,7 +1702,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;a&#x69;&#108;&#116;&#x6f;&#58;&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#x64;o.&#x63;&#x6f;&#109;">&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#x64;o.&#x63;&#x6f;&#109;</a></li>
+<li><a href="m&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;&#x73;&#117;p&#112;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#x72;&#97;&#x64;&#x6f;&#x2e;&#x63;&#x6f;&#x6d;">&#x73;&#117;p&#112;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#x72;&#97;&#x64;&#x6f;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
