--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;a&#105;&#108;&#x74;o&#x3a;&#x73;&#117;&#112;&#x70;&#111;&#x72;&#116;&#x40;&#118;i&#118;&#97;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#111;&#109;">&#x73;&#117;&#112;&#x70;&#111;&#x72;&#116;&#x40;&#118;i&#118;&#97;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#105;&#x6c;&#116;&#111;&#58;&#x73;&#117;&#112;&#x70;&#x6f;&#x72;&#116;&#x40;&#118;&#105;&#x76;&#97;&#x72;a&#100;&#111;&#46;&#99;&#111;m">&#x73;&#117;&#112;&#x70;&#x6f;&#x72;&#116;&#x40;&#118;&#105;&#x76;&#97;&#x72;a&#100;&#111;&#46;&#99;&#111;m</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#111;&#58;&#x6d;&#106;&#108;&#x61;&#103;&#x61;t&#116;&#x75;&#x74;&#97;&#x40;g&#x6d;&#97;&#x69;&#108;&#46;&#x63;&#111;&#109;">&#x6d;&#106;&#108;&#x61;&#103;&#x61;t&#116;&#x75;&#x74;&#97;&#x40;g&#x6d;&#97;&#x69;&#108;&#46;&#x63;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#111;&#58;&#x6d;&#x6a;&#108;&#x61;&#103;&#97;&#x74;&#x74;&#117;&#x74;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#99;&#x6f;&#x6d;">&#x6d;&#x6a;&#108;&#x61;&#103;&#97;&#x74;&#x74;&#117;&#x74;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#99;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1448,8 +1448,8 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
 section 4 ME Latin and Greek
 
 ADV-0004-0007-0001 4 ME Latin and ME Greek:                          crit, des33, 2019-06-07, 12d
-    ADV-0004-0007-0001 MeL MO:                                             des34, after des32, 4d
-        4 MeL MO 1 reg:                                                    des45, after des32, 1d
+    ADV-0004-0007-0001 MeL MO:                                             des34, 2019-06-07, 4d
+        4 MeL MO 1 reg:                                                    des45, 2019-06-07, 1d
         4 MeL MO 2 thn:                                                    des46, after des45, 1d
         4 MeL MO 3 bld:                                                    des47, after des46, 1d
         4 MeL MO 4 blk:                                                    des57, after des47, 1d
@@ -1702,7 +1702,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;&#x73;&#117;p&#112;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#x72;&#97;&#x64;&#x6f;&#x2e;&#x63;&#x6f;&#x6d;">&#x73;&#117;p&#112;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#x72;&#97;&#x64;&#x6f;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
+<li><a href="&#109;&#97;&#105;&#x6c;&#116;&#x6f;&#58;&#115;u&#x70;&#x70;&#111;&#x72;&#116;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#97;&#x64;o&#x2e;c&#x6f;&#109;">&#115;u&#x70;&#x70;&#111;&#x72;&#116;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#97;&#x64;o&#x2e;c&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
